--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1047.0",
     "bcrypt": "^5.0.1",
+    "buffer-to-stream": "^1.0.0",
+    "cloudinary": "^1.31.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^10.0.0",
     "global": "^4.4.0",
